--- a/neural_networks.ipynb
+++ b/neural_networks.ipynb
@@ -15,7 +15,9 @@
     "import math\n",
     "import random\n",
     "from sklearn.preprocessing import MinMaxScaler\n",
-    "from sklearn.metrics import mean_squared_error"
+    "from sklearn.metrics import mean_squared_error\n",
+    "import eli5\n",
+    "from eli5.sklearn import PermutationImportance"
    ]
   },
   {
@@ -69,6 +71,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "n_tot = int( X.shape[1] )\n",
+    "splits = int( 2 )\n",
+    "n_splits = int( n_tot/splits )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "#np.random.seed(100)\n",
     "#dataset = np.random.randn(500, 11)\n",
     "#X = dataset[:,0:10].astype(\"float32\")\n",
@@ -90,16 +103,12 @@
    "source": [
     "# solution 1 -- split single neurons\n",
     "\n",
-    "n_tot = int( X.shape[1] )\n",
-    "splits = int( 2 )\n",
-    "n_splits = int( n_tot/splits )\n",
-    "\n",
     "input = keras.layers.Input(shape = (n_tot), name = \"input_layer\")\n",
     "layer1 = keras.layers.Lambda(lambda x: x[:,0:n_splits])(input)  # take the first n_splits neurons\n",
     "layer2 = keras.layers.Lambda(lambda x: x[:,n_splits:])(input)   # take the other neurons\n",
     "output1 = keras.layers.Dense(units = 1)(layer1)                 # add extra dense layer\n",
     "output2 = keras.layers.Dense(units = 1)(layer2)                 # add extra dense layer\n",
-    "output = keras.layers.concatenate([output1, output2])           # concatenate the layers to have a single output layer\n",
+    "output = keras.layers.average([output1, output2])               # average the layers to have a single output layer\n",
     "\n",
     "model = keras.models.Model(input, output)"
    ]
@@ -129,9 +138,23 @@
    "outputs": [],
    "source": [
     "# fit and forecast \n",
-    "model.compile(loss = 'mean_squared_error', optimizer = 'adam', metrics=['MeanSquaredError'])\n",
+    "model.compile(loss = 'mean_squared_error', optimizer = 'adam')\n",
     "history = model.fit(X, Y, epochs=100)\n",
     "forecast = model.predict(X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# plot MSE\n",
+    "plt.plot(history.history[\"loss\"])\n",
+    "plt.title('MSE')\n",
+    "plt.xlabel('epoch')\n",
+    "plt.legend(['train', 'test'], loc='upper left')\n",
+    "plt.show()"
    ]
   },
   {
@@ -153,7 +176,7 @@
     "split = keras.layers.Lambda(lambda x: tf.split(x,num_or_size_splits = splits,axis = 1))(input)\n",
     "layer1 = keras.layers.Dense(units = 1)(split[0])\n",
     "layer2 = keras.layers.Dense(units = 1)(split[1])\n",
-    "output = keras.layers.concatenate([layer1, layer2])\n",
+    "output = keras.layers.concatenate([layer1, layer2]) # produces a different output for each subset\n",
     "\n",
     "model = keras.models.Model(input, output)"
    ]
@@ -183,9 +206,23 @@
    "outputs": [],
    "source": [
     "# fit and forecast \n",
-    "model.compile(loss = 'mean_squared_error', optimizer = 'adam', metrics=['MeanSquaredError'])\n",
+    "model.compile(loss = 'mean_squared_error', optimizer = 'adam')\n",
     "history = model.fit(X, Y, epochs=100)\n",
     "forecast = model.predict(X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# plot MSE\n",
+    "plt.plot(history.history[\"loss\"])\n",
+    "plt.title('MSE')\n",
+    "plt.xlabel('epoch')\n",
+    "plt.legend(['train', 'test'], loc='upper left')\n",
+    "plt.show()"
    ]
   },
   {
@@ -236,10 +273,24 @@
    "outputs": [],
    "source": [
     "# fit and forecast \n",
-    "model.compile(loss = 'mean_squared_error', optimizer = 'adam', metrics=['MeanSquaredError'])\n",
+    "model.compile(loss = 'mean_squared_error', optimizer = 'adam')\n",
     "XX = (X[:, :n_splits], X[:, n_splits:])\n",
     "history = model.fit(XX, Y, epochs=100)\n",
     "forecast = model.predict(XX)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# plot MSE\n",
+    "plt.plot(history.history[\"loss\"])\n",
+    "plt.title('MSE')\n",
+    "plt.xlabel('epoch')\n",
+    "plt.legend(['train', 'test'], loc='upper left')\n",
+    "plt.show()"
    ]
   },
   {
@@ -271,7 +322,7 @@
     "layer2 = keras.layers.Lambda(lambda x: x[:,n_splits:])(input)   # take the other neurons\n",
     "output1 = keras.layers.Dense(units = 1)(layer1)                 # add extra dense layer\n",
     "output2 = keras.layers.Dense(units = 1)(layer2)                 # add extra dense layer\n",
-    "output = keras.layers.concatenate([output1, output2])           # concatenate the layers to have a single output layer\n",
+    "output = keras.layers.average([output1, output2])           # concatenate the layers to have a single output layer\n",
     "mean = keras.layers.Dense(units = 1, activation = \"linear\")(output)\n",
     "var = keras.layers.Dense(units = 1, activation = \"softplus\")(output)\n",
     "\n",
@@ -285,8 +336,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_model.compile(loss=regression_nn_loss(var), optimizer=\"adam\")\n",
-    "train_model.fit(X, Y, epochs = 100)\n",
+    "print(pred_model.summary())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_model(pred_model, to_file='model_3.png', show_shapes=True, show_layer_names=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_model.compile(loss=regression_nn_loss(var), optimizer=\"adam\", metrics=['MeanSquaredError'])\n",
+    "history = train_model.fit(X, Y, epochs = 100)\n",
     "mean, var = pred_model.predict(X)"
    ]
   },
@@ -296,11 +365,48 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# plot MSE\n",
+    "plt.plot(history.history[\"MeanSquaredError\"])\n",
+    "plt.title('MSE')\n",
+    "plt.xlabel('epoch')\n",
+    "plt.legend(['train', 'test'], loc='upper left')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# plot confidence interval\n",
     "li = mean - 1.96*var\n",
     "ui = mean + 1.96*var\n",
     "fin = np.concatenate((li, mean, ui), axis = 1)\n",
-    "plt.plot(fin)"
+    "plt.plot(fin)\n",
+    "plt.title('Forecast')\n",
+    "plt.xlabel('steps ahead')\n",
+    "#plt.legend([\"li\",'mean', \"ui\"], loc='upper left')\n",
+    "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# feature importance\n",
+    "perm = PermutationImportance(train_model, scoring = 'neg_mean_squared_error', random_state = 1).fit(X, Y)\n",
+    "eli5.show_weights(perm)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
