--- a/neural_networks.ipynb
+++ b/neural_networks.ipynb
@@ -103,12 +103,12 @@
    "source": [
     "# solution 1 -- split single neurons\n",
     "\n",
-    "input = keras.layers.Input(shape = (n_tot), name = \"input_layer\")\n",
-    "layer1 = keras.layers.Lambda(lambda x: x[:,0:n_splits])(input)  # take the first n_splits neurons\n",
-    "layer2 = keras.layers.Lambda(lambda x: x[:,n_splits:])(input)   # take the other neurons\n",
-    "output1 = keras.layers.Dense(units = 1)(layer1)                 # add extra dense layer\n",
-    "output2 = keras.layers.Dense(units = 1)(layer2)                 # add extra dense layer\n",
-    "output = keras.layers.average([output1, output2])               # average the layers to have a single output layer\n",
+    "input = keras.layers.Input(shape = (n_tot), name = \"input\")\n",
+    "layer1 = keras.layers.Lambda(lambda x: x[:,0:n_splits], name = \"split_1\")(input)# take the first n_splits neurons\n",
+    "layer2 = keras.layers.Lambda(lambda x: x[:,n_splits:], name = \"split_2\")(input) # take the other neurons\n",
+    "output1 = keras.layers.Dense(units = 1, activation = \"linear\", name = \"dense_1\")(layer1)# add extra dense layer\n",
+    "output2 = keras.layers.Dense(units = 1, activation = \"linear\", name = \"dense_2\")(layer2)# add extra dense layer\n",
+    "output = keras.layers.average([output1, output2], name = \"output\") # average the layers to get a single output layer\n",
     "\n",
     "model = keras.models.Model(input, output)"
    ]
@@ -128,7 +128,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_model(model, to_file='model_1.png', show_shapes=True, show_layer_names=True)"
+    "plot_model(model, show_shapes=True, show_layer_names=True)"
    ]
   },
   {
@@ -172,11 +172,11 @@
    "source": [
     "# solution 2 -- split entire dataset\n",
     "\n",
-    "input = keras.layers.Input(shape=(n_tot), name = \"input_layer\")\n",
-    "split = keras.layers.Lambda(lambda x: tf.split(x,num_or_size_splits = splits,axis = 1))(input)\n",
-    "layer1 = keras.layers.Dense(units = 1)(split[0])\n",
-    "layer2 = keras.layers.Dense(units = 1)(split[1])\n",
-    "output = keras.layers.concatenate([layer1, layer2]) # produces a different output for each subset\n",
+    "input = keras.layers.Input(shape=(n_tot), name = \"input\")\n",
+    "split = keras.layers.Lambda(lambda x: tf.split(x,num_or_size_splits = splits,axis = 1), name = \"split\")(input) # split dataset in half\n",
+    "layer1 = keras.layers.Dense(units = 1, activation = \"linear\", name = \"dense_1\")(split[0])\n",
+    "layer2 = keras.layers.Dense(units = 1, activation = \"linear\", name = \"dense_2\")(split[1])\n",
+    "output = keras.layers.concatenate([layer1, layer2], name = \"output\") # produces a different output for each subset\n",
     "\n",
     "model = keras.models.Model(input, output)"
    ]
@@ -196,7 +196,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_model(model, to_file='model_2.png', show_shapes=True, show_layer_names=True)"
+    "plot_model(model, show_shapes=True, show_layer_names=True)"
    ]
   },
   {
@@ -239,11 +239,11 @@
    "outputs": [],
    "source": [
     "# solution 3 -- separate inputs \n",
-    "input_1 = keras.layers.Input(shape=(n_splits,))\n",
-    "input_2 = keras.layers.Input(shape=(n_splits,))\n",
-    "layer_1 = keras.layers.Dense(units = 1)(input_1)\n",
-    "layer_2 = keras.layers.Dense(units = 1)(input_2)\n",
-    "output = keras.layers.Add()([layer_1, layer_2])\n",
+    "input_1 = keras.layers.Input(shape=(n_splits,), name = \"input_1\")\n",
+    "input_2 = keras.layers.Input(shape=(n_splits,), name = \"input_2\")\n",
+    "layer_1 = keras.layers.Dense(units = 1, activation = \"linear\", name = \"dense_1\")(input_1)\n",
+    "layer_2 = keras.layers.Dense(units = 1, activation = \"linear\", name = \"dense_2\")(input_2)\n",
+    "output = keras.layers.Add(name = \"output\")([layer_1, layer_2])\n",
     "\n",
     "model = keras.models.Model(inputs=[input_1,input_2], outputs=output)"
    ]
@@ -263,7 +263,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_model(model, to_file='model_2.png', show_shapes=True, show_layer_names=True)"
+    "plot_model(model, show_shapes=True, show_layer_names=True)"
    ]
   },
   {
@@ -317,14 +317,14 @@
    "outputs": [],
    "source": [
     "# confidence interval \n",
-    "input = keras.layers.Input(shape = (n_tot), name = \"input_layer\")\n",
-    "layer1 = keras.layers.Lambda(lambda x: x[:,0:n_splits])(input)  # take the first n_splits neurons\n",
-    "layer2 = keras.layers.Lambda(lambda x: x[:,n_splits:])(input)   # take the other neurons\n",
-    "output1 = keras.layers.Dense(units = 1)(layer1)                 # add extra dense layer\n",
-    "output2 = keras.layers.Dense(units = 1)(layer2)                 # add extra dense layer\n",
-    "output = keras.layers.average([output1, output2])           # concatenate the layers to have a single output layer\n",
-    "mean = keras.layers.Dense(units = 1, activation = \"linear\")(output)\n",
-    "var = keras.layers.Dense(units = 1, activation = \"softplus\")(output)\n",
+    "input = keras.layers.Input(shape = (n_tot), name = \"input\")\n",
+    "layer1 = keras.layers.Lambda(lambda x: x[:,0:n_splits], name = \"split_1\")(input)  \n",
+    "layer2 = keras.layers.Lambda(lambda x: x[:,n_splits:], name = \"split_2\")(input)   \n",
+    "output1 = keras.layers.Dense(units = 1, activation = \"linear\", name = \"dense_1\")(layer1)                 \n",
+    "output2 = keras.layers.Dense(units = 1, activation = \"linear\", name = \"dense_2\")(layer2)                 \n",
+    "output = keras.layers.average([output1, output2], name = \"output\")           \n",
+    "mean = keras.layers.Dense(units = 1, activation = \"linear\", name = \"mean\")(output) # add layer for the mean\n",
+    "var = keras.layers.Dense(units = 1, activation = \"softplus\", name = \"variance\")(output) # add layer for the variance\n",
     "\n",
     "train_model = keras.models.Model(input, mean)\n",
     "pred_model = keras.models.Model(input, [mean, var])"
@@ -345,7 +345,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_model(pred_model, to_file='model_3.png', show_shapes=True, show_layer_names=True)"
+    "plot_model(pred_model, show_shapes=True, show_layer_names=True)"
    ]
   },
   {
